; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-thin-metadata.c_data_block_dec.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-thin-metadata.c_data_block_dec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_space_map = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @data_block_dec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @data_block_dec(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.dm_space_map*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = bitcast i8* %9 to %struct.dm_space_map*
  store %struct.dm_space_map* %10, %struct.dm_space_map** %5, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @memcpy(i32* %6, i8* %11, i32 4)
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @le64_to_cpu(i32 %13)
  %15 = call i32 @unpack_block_time(i32 %14, i32* %7, i32* %8)
  %16 = load %struct.dm_space_map*, %struct.dm_space_map** %5, align 8
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @dm_sm_dec_block(%struct.dm_space_map* %16, i32 %17)
  ret void
}

declare dso_local i32 @memcpy(i32*, i8*, i32) #1

declare dso_local i32 @unpack_block_time(i32, i32*, i32*) #1

declare dso_local i32 @le64_to_cpu(i32) #1

declare dso_local i32 @dm_sm_dec_block(%struct.dm_space_map*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
